# mrsh

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/mrsh-client/: Cargo.toml
crates/mrsh-client/src/: browse.rs  client.rs  commands.rs  config_tui.rs  dashboard.rs  fleet.rs  host_picker.rs  install_pack.rs  log_viewer.rs  mux.rs  quic.rs  recording.rs  relay_connect.rs  session_log.rs  sftp.rs  shell.rs  socks.rs  sync.rs  tunnel.rs
crates/mrsh-core/: Cargo.toml
crates/mrsh-core/src/: auth.rs  config.rs  lib.rs  protocol.rs  tls.rs
crates/mrsh-relay/: Cargo.toml
crates/mrsh-relay/src/: rendezvous.rs  stun.rs
crates/mrsh-server/: Cargo.toml
crates/mrsh-server/src/: dispatch.rs  exec.rs  exec_user.rs  fileops.rs  gui.rs  handler.rs  lib.rs  listener.rs  mux.rs  notify.rs  plugin.rs  quic.rs  safety.rs  screenshot.rs  selfupdate.rs  service.rs  shell.rs  sync.rs  tray.rs  tunnel.rs
crates/mrsh-transfer/: Cargo.toml
crates/mrsh-transfer/src/: delta.rs
crates/rsh-client/: Cargo.toml
crates/rsh-client/src/: browse.rs  client.rs  commands.rs  config_tui.rs  dashboard.rs  fleet.rs  host_picker.rs  install_pack.rs  lib.rs  log_viewer.rs  mux.rs  quic.rs  recording.rs  relay_connect.rs  session_log.rs  sftp.rs  shell.rs  socks.rs  sync.rs  tunnel.rs
crates/rsh-core/: Cargo.toml
crates/rsh-core/src/: auth.rs  config.rs  wire.rs
crates/rsh-relay/: Cargo.toml  build.rs
crates/rsh-relay/src/: codec.rs  discovery.rs  lib.rs  relay.rs  rendezvous.rs
crates/rsh-server/: Cargo.toml
crates/rsh-server/src/: dispatch.rs  exec.rs  exec_user.rs  fileops.rs  gui.rs  handler.rs  lib.rs  listener.rs  plugin.rs  quic.rs  ratelimit.rs  safety.rs  screenshot.rs  selfupdate.rs  service.rs  session.rs  shell.rs  ssh.rs  sync.rs  tray.rs  tunnel.rs
crates/rsh-transfer/: Cargo.toml
crates/rsh-transfer/src/: blockcache.rs  chunking.rs  lib.rs
docs/: TEST-TREE.md  rsh-relay-architecture-server-side-acceptance-beads-u8d-fix.md  rsh-v120-listpeers-fleet-discovery-dashboard-non-blocking-refresh.md
plugins/: build.bat  example_plugin.c  rsh_plugin.h
proto/: rdv.proto
scripts/: av-false-positive-submit.md  vt-check.sh
src/: main.rs
