[workspace]
members = [
    "crates/rsh-core",
    "crates/rsh-transfer",
    "crates/rsh-relay",
    "crates/rsh-server",
    "crates/rsh-client",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcodelpin/rsh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"

# QUIC
quinn = "0.11"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem", "zeroize"] }
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
rand = "0.8"
sha2 = "0.10"
md-5 = "0.10"
totp-rs = { version = "5.7", features = ["gen_secret"] }

# Protobuf
prost = "0.13"
prost-build = "0.13"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Workspace crates (internal)
rsh-core = { path = "crates/rsh-core" }
rsh-transfer = { path = "crates/rsh-transfer" }
rsh-relay = { path = "crates/rsh-relay" }
rsh-server = { path = "crates/rsh-server" }
rsh-client = { path = "crates/rsh-client" }

[package]
name = "rsh"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rsh"
path = "src/main.rs"

[dependencies]
rsh-core.workspace = true
rsh-client.workspace = true
rsh-relay.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

rsh-server.workspace = true
quinn = { workspace = true, optional = true }
tokio-util = "0.7"
tokio-rustls.workspace = true
ed25519-dalek.workspace = true
ssh-key.workspace = true
rand.workspace = true
sha2.workspace = true
base64 = "0.22"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }

[features]
quic = ["rsh-server/quic", "rsh-client/quic", "quinn"]

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
