[workspace]
members = [
    "crates/mrsh-core",
    "crates/mrsh-transfer",
    "crates/mrsh-relay",
    "crates/mrsh-server",
    "crates/mrsh-client",
]
resolver = "2"

[workspace.package]
version = "1.3.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/marcodelpin/mrsh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"

# QUIC
quinn = "0.11"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem", "zeroize"] }
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
rand = "0.8"
sha2 = "0.10"
md-5 = "0.10"
totp-rs = { version = "5.7", features = ["gen_secret"] }

# Protobuf
prost = "0.13"
prost-build = "0.13"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Workspace crates (internal)
mrsh-core = { path = "crates/mrsh-core" }
mrsh-transfer = { path = "crates/mrsh-transfer" }
mrsh-relay = { path = "crates/mrsh-relay" }
mrsh-server = { path = "crates/mrsh-server" }
mrsh-client = { path = "crates/mrsh-client" }

[package]
name = "mrsh"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mrsh"
path = "src/main.rs"

[dependencies]
mrsh-core.workspace = true
mrsh-client.workspace = true
mrsh-relay.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

mrsh-server.workspace = true
quinn = { workspace = true, optional = true }
tokio-util = "0.7"
tokio-rustls.workspace = true
ed25519-dalek.workspace = true
ssh-key.workspace = true
rand.workspace = true
sha2.workspace = true
base64 = "0.22"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem"] }

[features]
quic = ["mrsh-server/quic", "mrsh-client/quic", "quinn"]
no-toast = []
no-exec = []
no-shell = []
no-reboot = []
no-screenshot = []
no-self-update = []
no-clipboard = []
no-relay = []
read-only = ["no-exec", "no-shell"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
