[package]
name = "mrsh-client"
version.workspace = true
edition.workspace = true

[dependencies]
mrsh-core.workspace = true
mrsh-transfer.workspace = true
mrsh-relay.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64 = "0.22"
chrono.workspace = true
crossterm = "0.28"
ratatui.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rpassword = "7"
atty = "0.2"
dirs = "5"
sha2.workspace = true
hex = "0.4"
rand.workspace = true
tar = "0.4"
flate2 = "1"
tempfile = "3"
quinn = { workspace = true, optional = true }

[features]
quic = ["quinn"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
