[package]
name = "mrsh-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
rustls-pemfile.workspace = true
ed25519-dalek.workspace = true
ssh-key.workspace = true
rand.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1"
dirs = "6"
base64 = "0.22"
glob = "0.3"
zstd = "0.13"
totp-rs.workspace = true
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
filetime = "0.2"
