[package]
name = "rsh-server"
version.workspace = true
edition.workspace = true

[dependencies]
rsh-core.workspace = true
rsh-transfer.workspace = true
rsh-relay.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
adler32 = "1"
base64 = "0.22"
flate2 = "1"
md-5.workspace = true
chrono = { version = "0.4", optional = true }
tokio-rustls = "0.26"
tokio-util = "0.7"
socket2 = { version = "0.5", features = ["all"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }

quinn = { version = "0.11", optional = true }

image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }

[features]
default = []
quic = ["quinn"]
ssh = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }
windows-service = "0.8"
libloading = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
