[package]
name = "rsh-transfer"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
md-5.workspace = true
sha2.workspace = true
anyhow.workspace = true
adler32 = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
